--- a/next-website/styles/globals.css
+++ b/next-website/styles/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
+
 :root {
   background-color: rgb(231, 236, 236);
+}
+
+.nav-font {
+  font-family: 'Italiana', serif;
 }
